GCP-resouce-deployment/03-language-basics/terraform-manifests/c5-vminstances.tf
resource "google_compute_instance" "server-vm" {
  name="web-server-01"
  machine_type = "e2-micro"
  zone = "us-central1-a"
  tags=[tolist(google_compute_firewall.fw_ssh.target_tags)[0], tolist(google_compute_firewall.fw_http.target_tags)[0]]
  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.subnet-01.id
    access_config {
      
    }
  }

  metadata_startup_script = file("${path.module}/hello.txt")

}
